--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.32",
+    "bulma": "^0.9.4",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.3.3"
   },
