--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
